--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,19 @@
     font-family: Roboto;
 
 }
+/* 
+body {
+    background-color: tomato;
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        background-color: blue;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    body {
+        background-color: green;
+    }
+} */
